<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, VampiDroid!</string>
    <string name="app_name">VampiDroid</string>
	<string name="card_name">Card Name</string>
	<string name="searchLabel">Vampidroid</string>
	<string name="searchHint">Search Cards Text</string>
	<!-- <string name="search_hint">Search Cards</string> -->
	<string name="search_cards_text">Search Cards Text</string>
	<string name="share_cards_text">Share Cards Text</string>
	<string name="share_library_card_text">Share Library Card Text</string>
	<string name="share_crypt_card_text">Share Crypt Card Text</string>
	
	<string name="preferences">Preferences</string>
	<string name="about">About</string>
	<string name="clear_recent_searches">Clear recent searches</string>
	<string name="help">Filters Help</string>
	<string name="show_hide_filters">Show/Hide Advanced Filters</string>
	<string name="add_favorite_card">Add card to favorites</string>
	<string name="remove_favorite_card">Remove card from favorites</string>
	<string name="show_favorite_cards">Show favorite cards</string>
	
	
</resources>