<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item 
		android:id="@+id/menu_search" 
		android:title="@string/search_cards_text"
		android:icon="@drawable/ic_action_search" 
		android:showAsAction="ifRoom|withText"></item>
	
	<!-- 
	<item 
		android:id="@+id/menu_share" 
		android:title="@string/share_cards_text"
		android:icon="@drawable/ic_action_share" 
		android:showAsAction="ifRoom|withText"></item>
	
	 -->
	 
	<!-- 
	<item 
		android:title="@string/preferences"
		android:icon="@drawable/ic_menu_preferences" 
		android:id="@+id/menu_preferences"></item>
	-->
	<item 
		android:icon="@drawable/ic_menu_clear_recent_searches" 
		android:id="@+id/menu_clear_recent_searches" 
		android:title="@string/clear_recent_searches"></item>
	
	<item 
		android:icon="@drawable/ic_menu_star" 
		android:id="@+id/menu_show_favorite_cards" 
		android:title="@string/show_favorite_cards"></item>
		
	<item 
		android:title="@string/help" 
		android:icon="@drawable/ic_menu_help" 
		android:id="@+id/menu_help"></item>
	<item 
		android:title="@string/about" 
		android:icon="@drawable/ic_menu_about" 
		android:id="@+id/menu_about"></item>
		
	
	
	

</menu>
